# solana-stub-prover

./: .gitignore  README.md  check_topic.sh  test_serialization.rs
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
script/src/: kafka.rs  lib.rs  solana.rs  types.rs  utils.rs
